# rekrutacja-stx

./: pyproject.toml
django_project/: pytest.ini
django_project/apps/book_list/: admin.py  apps.py  forms.py  lang_choices.py  models.py  urls.py  utils.py  validators.py  views.py
django_project/apps/book_list/api/: pagination.py  serializers.py  urls.py  views.py
django_project/apps/book_list/migrations/: 0001_initial.py  0002_auto_20211116_2339.py
django_project/apps/book_list/tests/: conftest.py  tests.py
django_project/django_project/: settings.py  urls.py
django_project/static/books/: lang_codes.json  langs_autocomplete.json  my.css
django_project/templates/: add_edit_form.html  base.html  book_list.html  import.html  index.html
